# zero-to-production

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
configuration/: base.yaml
scripts/: init_db.sh
src/: configurations.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_checks.rs
