[package]
name = "zero2prod"
version = "0.1.0"
authors = ["MitaRyosuke <sasakissa@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.4.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }

[dev-dependencies]
reqwest = "0.10.10"
tokio = "0.2.24"
