[package]
name = "zero2prod"
version = "0.1.0"
authors = ["MitaRyosuke <sasakissa@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.4.0", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = "0.10.1"
uuid = {version = "0.8.2", features=["v4"]}
chrono = "0.4.19"
log = "0.4.14"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.1"
tracing-actix-web = "0.2.1"
serde-aux = "2.1.1"
unicode-segmentation = "1.7.1"
validator = "0.12.0"
reqwest = "0.10.10"

[dev-dependencies]
claim = "0.4.0"
lazy_static = "1.4.0"
tokio = "0.2.24"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.4.9"
